# MyGame

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  README.md  State.cpp  State.h  main.cpp
Components/: MovementComponent.cpp  MovementComponent.h
Config/: supported_keys.ini  window.ini
Entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
Resources/: Button.cpp  Button.h
States/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
